deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qfaas-client-service
  namespace: default
spec:
  selector:
    app: qfaas-client
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
