deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  annotations:
  # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropriate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - foo'
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: qfaas-client-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: qfaas.cloud
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: qfaas-client-service
              port: 
                number: 80
  tls:
  - hosts:
    - qfaas.cloud
    secretName: cloudflare-tls
